# intercom-smart-enhancement

./: README.md
firmware/: Cargo.toml  partitions.csv
firmware/src/: logging.rs  main.rs
firmware/src/services/: uart_service.rs
